fix(security): configure CORS to allow all origins for deployment